<resources>
    <string name="app_name">TIP CALCULATOR</string>
    <string name="bill_amount">Bill Total</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_30">Amazing (50%)</string>
    <string name="good_20">Good (45%)</string>
    <string name="ok_10">OK (40%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_calculator">Tip Calculator</string>
</resources>