<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#0E8300"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/tip_calculator"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/bill_amount_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/bill_amount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingTop="10dp"
        android:text="@string/how_was_the_service"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/tip_options_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp">

        <RadioButton
            android:id="@+id/amazing_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_30" />

        <RadioButton
            android:id="@+id/good_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_20" />

        <RadioButton
            android:id="@+id/ok_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_10" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:text="@string/round_up_tip"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/round_up_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="215dp"
            android:padding="15dp"
            android:minHeight="48dp"
            android:minWidth="48dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="#D1E72DE5"
        android:padding="16dp"
        android:text="@string/calculate"
        android:textColor="#090909"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:textSize="24sp"
        android:paddingTop="16dp"
        android:gravity="start" />

</LinearLayout>
